--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
   "host": "localhost",
   "username": "docker",
   "password": "master",
-  "database": "eganet",
+  "database": "edanet",
   "migrations": [
     "./dist/shared/infra/typeorm/migrations/*.ts"
   ],
